--- a/maket/package.json
+++ b/maket/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "do-slide": "^1.1.4",
     "gsap": "^3.7.1",
     "normalize.css": "^8.0.1",
     "sass": "^1.38.0"
