--- a/maket/package.json
+++ b/maket/package.json
@@ -32,6 +32,7 @@
     "do-slide": "^1.1.4",
     "gsap": "^3.7.1",
     "normalize.css": "^8.0.1",
-    "sass": "^1.38.0"
+    "sass": "^1.38.0",
+    "swiper": "^6.8.4"
   }
 }
