--- a/backend/api/cases/models/cases.settings.json
+++ b/backend/api/cases/models/cases.settings.json
@@ -33,6 +33,9 @@
       "type": "component",
       "repeatable": true,
       "component": "cases.case-elements"
+    },
+    "service": {
+      "model": "services"
     }
   }
 }
