--- a/backend/api/services/models/services.settings.json
+++ b/backend/api/services/models/services.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "services",
   "info": {
-    "name": "services"
+    "name": "services",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -16,6 +17,14 @@
     },
     "slug": {
       "type": "string"
+    },
+    "color": {
+      "type": "enumeration",
+      "enum": [
+        "red",
+        "blue",
+        "green"
+      ]
     }
   }
 }
