--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,17 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "gsap": "^3.7.1",
+    "marked": "^3.0.2",
+    "nuxt": "^2.15.7",
+    "swiper": "^5.4.5",
+    "vue-awesome-swiper": "^4.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "fibers": "^5.0.0",
+    "sass": "^1.39.0",
+    "sass-loader": "^10.2.0"
+  }
 }
