blog, contacts, policy pages

--- a/backend/api/settings/models/settings.settings.json
+++ b/backend/api/settings/models/settings.settings.json
@@ -28,6 +28,11 @@
     },
     "coords": {
       "type": "string"
+    },
+    "soc": {
+      "type": "component",
+      "repeatable": false,
+      "component": "socials.socials"
     }
   }
 }
