--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/moment": "^1.6.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "gsap": "^3.7.1",
     "marked": "^3.0.2",
