--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^1.3.0",
     "fibers": "^5.0.0",
     "sass": "^1.39.0",
     "sass-loader": "^10.2.0"
